[gd_scene load_steps=4 format=3 uid="uid://c2n8tr2r251qi"]

[ext_resource type="Script" path="res://exit.gd" id="1_pkqwe"]
[ext_resource type="Texture2D" uid="uid://dg6p2f2kg0k66" path="res://assets/map/generic/exit.png" id="2_a0gyf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_j8uwe"]
radius = 16.0

[node name="exit" type="StaticBody2D"]
script = ExtResource("1_pkqwe")

[node name="exit" type="Sprite2D" parent="."]
texture = ExtResource("2_a0gyf")

[node name="ExitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitArea"]
shape = SubResource("CircleShape2D_j8uwe")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="ExitArea" to="." method="_on_exit_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
